fix for nav sub item spacing. section head test

--- a/assets/styles/input.css
+++ b/assets/styles/input.css
@@ -542,3 +542,17 @@ nav.active .overlay {
   margin: var(--u-margin);
   /* background: black; */
 }
+
+/* #Section Head */
+.section-head {
+    /* positioning */
+    box-sizing: border-box;
+    width: 100vw; 
+    margin-left: calc(-33.333% - 5px);
+    padding-left: calc(33.333% + 8px);
+
+    /* styling */
+    @apply text-white;
+    @apply bg-black;
+    @apply py-16;
+}
